Code review cleanup for #68 following @jongpie comments - only thing left to do is regenerate the CustomObjectRollup logger and Rollup packages

--- a/plugins/CustomObjectRollupLogger/classes/RollupCustomObjectLoggerTests.cls
+++ b/plugins/CustomObjectRollupLogger/classes/RollupCustomObjectLoggerTests.cls
@@ -10,7 +10,10 @@ private class RollupCustomObjectLoggerTests {
     rollupCustomLogger.save();
     Test.stopTest();
 
-    List<RollupLog__c> rollupLogs = [SELECT Id, NumberOfLogEntries__c, TransactionId__c, (SELECT Message__c, LoggingLevel__c FROM RollupLogEntry__r) FROM RollupLog__c];
+    List<RollupLog__c> rollupLogs = [
+      SELECT Id, NumberOfLogEntries__c, TransactionId__c, (SELECT Message__c, LoggingLevel__c, LogRetentionDate__c FROM RollupLogEntry__r)
+      FROM RollupLog__c
+    ];
     System.assertEquals(1, rollupLogs.size(), 'Parent-level rollup log should have been created');
     RollupLog__c firstEntry = rollupLogs[0];
     System.assertNotEquals(null, firstEntry.TransactionId__c, 'Transaction Id should have been assigned');
@@ -22,5 +25,6 @@ private class RollupCustomObjectLoggerTests {
 
     System.assertEquals(LoggingLevel.ERROR.name(), firstEntry.RollupLogEntry__r[1].LoggingLevel__c);
     System.assertEquals('Second test log with record' + '\n' + JSON.serializePretty(new Account()), firstEntry.RollupLogEntry__r[1].Message__c);
+    System.assertNotEquals(null, firstEntry.RollupLogEntry__r[1].LogRetentionDate__c, 'Retention date should have been filled out');
   }
 }
