Further cleanup on logging plugins

--- a/plugins/CustomObjectRollupLogger/classes/RollupCustomObjectLoggerTests.cls
+++ b/plugins/CustomObjectRollupLogger/classes/RollupCustomObjectLoggerTests.cls
@@ -11,7 +11,7 @@ private class RollupCustomObjectLoggerTests {
     Test.stopTest();
 
     List<RollupLog__c> rollupLogs = [
-      SELECT Id, NumberOfLogEntries__c, TransactionId__c, (SELECT Message__c, LoggingLevel__c, LogRetentionDate__c FROM RollupLogEntry__r)
+      SELECT Id, NumberOfLogEntries__c, TransactionId__c, (SELECT Message__c, LoggingLevel__c FROM RollupLogEntry__r)
       FROM RollupLog__c
     ];
     System.assertEquals(1, rollupLogs.size(), 'Parent-level rollup log should have been created');
@@ -25,6 +25,5 @@ private class RollupCustomObjectLoggerTests {
 
     System.assertEquals(LoggingLevel.ERROR.name(), firstEntry.RollupLogEntry__r[1].LoggingLevel__c);
     System.assertEquals('Second test log with record' + '\n' + JSON.serializePretty(new Account()), firstEntry.RollupLogEntry__r[1].Message__c);
-    System.assertNotEquals(null, firstEntry.RollupLogEntry__r[1].LogRetentionDate__c, 'Retention date should have been filled out');
   }
 }
